--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
+  "private": true,
   "name": "fable-repl",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Fable REPL",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build-app": "cd src && dotnet fable webpack -- -p",
+    "build-app": "cd src && dotnet fable webpack-cli",
     "start-app": "cd src && dotnet fable webpack-dev-server",
-    "webpack": "node node_modules/webpack/bin/webpack.js"
+    "postinstall": "dotnet restore"
   },
   "dependencies": {
     "babel-template": "^6.26.0",
-    "bulma": "^0.6.1",
+    "bulma": "^0.7.1",
     "font-awesome": "^4.7.0",
-    "monaco-editor": "^0.10.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "monaco-editor": "^0.13.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "requirejs": "^2.3.5"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.2",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "css-loader": "^0.28.7",
-    "fable-loader": "^1.1.6",
-    "fable-utils": "^1.0.6",
-    "file-loader": "^1.1.5",
-    "gh-pages": "^1.1.0",
-    "json-loader": "^0.5.7",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.0.9",
+    "autoprefixer": "^9.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.0",
+    "fable-loader": "next",
+    "file-loader": "^1.1.11",
+    "gh-pages": "^1.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
     "remotedev": "^0.2.7",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "browserslist": [
     "last 2 versions"
