--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -1,17 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.JS\Interfaces.fs">
+      <Paket>True</Paket>
+      <Link>paket-files/Interfaces.fs</Link>
+    </Compile>
+    <Compile Include="Shared.fs" />
+    <Compile Include="Monaco.fs" />
+    <Compile Include="Editor.fs" />
     <Compile Include="Generator.fs" />
     <Compile Include="Mouse.fs" />
     <Compile Include="Widgets/Samples.fs" />
     <Compile Include="Widgets/About.fs" />
     <Compile Include="Sidebar.fs" />
     <Compile Include="Main.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Monaco\Monaco.fsproj" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
