--- a/src/Worker/Worker.fsproj
+++ b/src/Worker/Worker.fsproj
@@ -8,9 +8,12 @@
       <Paket>True</Paket>
       <Link>paket-files/Interfaces.fs</Link>
     </Compile>
-    <Compile Include="Monaco.fs" />
-    <Compile Include="Util.fs" />
-    <Compile Include="Editor.fs" />
+    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.JS\Metadata.fs">
+      <Paket>True</Paket>
+      <Link>paket-files/Metadata.fs</Link>
+    </Compile>
+    <Compile Include="../App/Shared.fs" />
+    <Compile Include="Worker.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
