--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fable-loader": "next",
     "file-loader": "^1.1.11",
     "gh-pages": "^1.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "remotedev": "^0.2.7",
@@ -38,7 +39,8 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "worker-loader": "^2.0.0"
   },
   "browserslist": [
     "last 2 versions"
