--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "fable-loader": "next",
+    "fable-loader": "2.0.0-alpha-003",
+    "fable-splitter": "2.0.0-alpha-003",
     "file-loader": "^1.1.11",
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
