--- a/public/samples/Samples.fsproj
+++ b/public/samples/Samples.fsproj
@@ -4,12 +4,16 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="../../src/Lib/bin/Debug/netstandard2.0/Fable.Repl.Lib.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="games/mario.fs" />
     <Compile Include="games/ozmo.fs" />
     <Compile Include="visual/basic-canvas.fs" />
     <Compile Include="visual/mandelbrot.fs" />
     <Compile Include="interop/interop-samples.fs" />
     <Compile Include="interop/jquery.fs" />
+    <Compile Include="other/elmish-counter.fs" />
     <Compile Include="other/parser.fs" />
     <Compile Include="other/sudoku.fs" />
     <Compile Include="other/raytrace.fs" />
