--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "build-app": "cd src/App && dotnet fable webpack-cli",
-    "start-app": "cd src/App && dotnet fable webpack-dev-server",
-    "postinstall": "dotnet restore"
   },
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-standalone": "^6.26.0",
     "babel-template": "^6.26.0",
     "bulma": "^0.7.1",
@@ -19,10 +18,12 @@
     "font-awesome": "^4.7.0",
     "monaco-editor": "^0.13.1",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-monaco-editor": "^0.17.2",
+    "react-resize-detector": "^3.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.0",
+    "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
@@ -34,13 +35,14 @@
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "monaco-editor-webpack-plugin": "^1.4.0",
     "node-sass": "^4.9.2",
     "remotedev": "^0.2.7",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
+    "webpack": "^4.16.2",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
     "worker-loader": "^2.0.0"
   },
   "browserslist": [
