--- a/public/samples/Samples.fsproj
+++ b/public/samples/Samples.fsproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <Compile Include="elmish/counter.fs" />
     <Compile Include="elmish/clock.fs" />
+    <Compile Include="elmish/calculator.fs" />
+    <Compile Include="elmish/todomvc.fs" />
+    <Compile Include="elmish/memory.fs" />
     <Compile Include="games/mario.fs" />
     <Compile Include="games/ozmo.fs" />
     <Compile Include="visual/basic-canvas.fs" />
