--- a/public/samples/Samples.fsproj
+++ b/public/samples/Samples.fsproj
@@ -14,8 +14,10 @@
     <Compile Include="elmish/memory.fs" />
     <Compile Include="games/mario.fs" />
     <Compile Include="games/ozmo.fs" />
+    <Compile Include="games/pacman.fs" />
     <Compile Include="visual/basic-canvas.fs" />
     <Compile Include="visual/mandelbrot.fs" />
+    <Compile Include="visual/hokusai.fs" />
     <Compile Include="interop/interop-samples.fs" />
     <Compile Include="interop/jquery.fs" />
     <Compile Include="other/parser.fs" />
