--- a/public/samples/Samples.fsproj
+++ b/public/samples/Samples.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="visual/basic-canvas.fs" />
     <Compile Include="visual/mandelbrot.fs" />
     <Compile Include="visual/hokusai.fs" />
+    <Compile Include="visual/color-fountain.fs" />
     <Compile Include="interop/interop-samples.fs" />
     <Compile Include="interop/jquery.fs" />
     <Compile Include="other/parser.fs" />
