--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.JS\Interfaces.fs">
+    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.Repl\Interfaces.fs">
       <Paket>True</Paket>
       <Link>paket-files/Interfaces.fs</Link>
     </Compile>
