--- a/src/Worker/Worker.fsproj
+++ b/src/Worker/Worker.fsproj
@@ -4,11 +4,11 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.JS\Interfaces.fs">
+    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.Repl\Interfaces.fs">
       <Paket>True</Paket>
       <Link>paket-files/Interfaces.fs</Link>
     </Compile>
-    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.JS\Metadata.fs">
+    <Compile Include="..\..\paket-files\fable-compiler\Fable\src\dotnet\Fable.Repl\Metadata.fs">
       <Paket>True</Paket>
       <Link>paket-files/Metadata.fs</Link>
     </Compile>
