--- a/package.json
+++ b/package.json
@@ -8,39 +8,39 @@
   "license": "MIT",
   "scripts": {},
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/standalone": "^7.0.0",
-    "@babel/template": "^7.0.0",
-    "autoprefixer": "^9.1.3",
+    "@babel/standalone": "^7.1.0",
+    "@babel/template": "^7.1.0",
+    "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.2",
     "bulma": "^0.7.1",
     "bulma-pageloader": "^2.1.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "fable-loader": "2.0.0-beta-001",
-    "fable-splitter": "2.0.0-beta-002",
+    "fable-loader": "^2.0.0-beta-001",
+    "fable-splitter": "^2.0.0-beta-002",
     "file-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
-    "gh-pages": "^1.2.0",
+    "gh-pages": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "lz-string": "^1.4.4",
     "mini-css-extract-plugin": "^0.4.2",
-    "monaco-editor": "0.14.2",
-    "monaco-editor-webpack-plugin": "^1.5.1",
+    "monaco-editor": "0.14.3",
+    "monaco-editor-webpack-plugin": "^1.5.3",
     "node-sass": "^4.9.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-monaco-editor": "^0.18.0",
-    "react-resize-detector": "^3.1.1",
+    "react-resize-detector": "^3.1.2",
     "remotedev": "^0.2.7",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7",
+    "webpack-dev-server": "^3.1.8",
     "worker-loader": "^2.0.0"
   }
 }
