Fix and improve feedback on compilation success/fail
Issue #27

--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Generator.fs" />
     <Compile Include="Mouse.fs" />
     <Compile Include="Router.fs" />
+    <Compile Include="Toast.fs" />
     <Compile Include="Widgets/Samples.fs" />
     <Compile Include="Widgets/Other.fs" />
     <Compile Include="Sidebar.fs" />
