--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "worker-loader": "^2.0.0"
-  }
+  },
+  "dependencies": {}
 }
