Detect browser and add advice to the user if we find a slow browser

--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -8,6 +8,7 @@
       <Paket>True</Paket>
       <Link>paket-files/Interfaces.fs</Link>
     </Compile>
+    <Compile Include="Libs/ReactDeviceDetect.fs" />
     <Compile Include="Monaco.fs" />
     <Compile Include="Shared.fs" />
     <Compile Include="Helpers.fs" />
