--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -18,8 +18,11 @@
     <Compile Include="Router.fs" />
     <Compile Include="Toast.fs" />
     <Compile Include="ReactEditor.fs" />
+    <Compile Include="Widgets/About.fs" />
+    <Compile Include="Widgets/General.fs" />
+    <Compile Include="Widgets/Options.fs" />
     <Compile Include="Widgets/Samples.fs" />
-    <Compile Include="Widgets/Other.fs" />
+    <Compile Include="Widgets/Stats.fs" />
     <Compile Include="Sidebar.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
