--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="Widgets/Samples.fs" />
     <Compile Include="Widgets/Stats.fs" />
     <Compile Include="Sidebar.fs" />
+    <Compile Include="ConsolePanel.fs" />
     <Compile Include="Main.fs" />
     <Compile Include="Loader.fs" />
   </ItemGroup>
