--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/standalone": "^7.1.0",
     "@babel/template": "^7.1.0",
+    "@types/lz-string": "^1.3.32",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.2",
     "bulma": "^0.7.1",
