--- a/public/samples/Samples.fsproj
+++ b/public/samples/Samples.fsproj
@@ -7,6 +7,7 @@
     <Reference Include="../../src/Lib/bin/Debug/netstandard2.0/Fable.Repl.Lib.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="elmish/simple_input.fs" />
     <Compile Include="elmish/counter.fs" />
     <Compile Include="elmish/clock.fs" />
     <Compile Include="elmish/calculator.fs" />
