--- a/src/Lib/Fable.Repl.Lib.fsproj
+++ b/src/Lib/Fable.Repl.Lib.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="React.fs" />
     <Compile Include="Elmish.fs" />
     <Compile Include="Canvas.fs" />
+    <Compile Include="Recharts.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
