Make samples work with new REPL Lib

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "bulma-switch": "^2.0.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "fable-loader": "^2.0.0-beta-001",
-    "fable-splitter": "^2.0.0-beta-002",
+    "fable-loader": "^2.0.0",
+    "fable-splitter": "^2.0.2",
     "file-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.0",
