Add Fulma samples

--- a/public/samples/Samples.fsproj
+++ b/public/samples/Samples.fsproj
@@ -15,7 +15,36 @@
     <Compile Include="elmish/sudoku.fs" />
     <Compile Include="elmish/memory.fs" />
     <Compile Include="elmish/spreadsheet.fs" />
+    <Compile Include="fulma/box.fs" />
+    <Compile Include="fulma/button.fs" />
+    <Compile Include="fulma/content.fs" />
+    <Compile Include="fulma/delete.fs" />
+    <Compile Include="fulma/icon.fs" />
+    <Compile Include="fulma/image.fs" />
+    <Compile Include="fulma/progress.fs" />
+    <Compile Include="fulma/table.fs" />
+    <Compile Include="fulma/tag.fs" />
+    <Compile Include="fulma/title.fs" />
+    <Compile Include="fulma/notification.fs" />
     <Compile Include="fulma/form.fs" />
+    <Compile Include="fulma/breadcrumb.fs" />
+    <Compile Include="fulma/panel.fs" />
+    <Compile Include="fulma/card.fs" />
+    <Compile Include="fulma/menu.fs" />
+    <Compile Include="fulma/message.fs" />
+    <Compile Include="fulma/navbar.fs" />
+    <Compile Include="fulma/pagination.fs" />
+    <Compile Include="fulma/tabs.fs" />
+    <Compile Include="fulma/modal.fs" />
+    <Compile Include="fulma/media.fs" />
+    <Compile Include="fulma/dropdown.fs" />
+    <Compile Include="fulma/container.fs" />
+    <Compile Include="fulma/level.fs" />
+    <Compile Include="fulma/hero.fs" />
+    <Compile Include="fulma/footer.fs" />
+    <Compile Include="fulma/section.fs" />
+    <Compile Include="fulma/tile.fs" />
+    <Compile Include="fulma/columns.fs" />
     <Compile Include="games/mario.fs" />
     <Compile Include="games/ozmo.fs" />
     <Compile Include="games/pacman.fs" />
