--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
+    "workbox-webpack-plugin": "^3.6.3",
     "worker-loader": "^2.0.0"
   },
   "dependencies": {}
