--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.0.1",
     "fable-babel-plugins": "^2.1.0",
-    "fable-compiler": "^2.1.11",
-    "fable-loader": "^2.1.2",
+    "fable-compiler": "^2.2.0-beta-006",
+    "fable-loader": "^2.1.3",
     "fable-metadata": "^1.0.0-beta-002",
-    "fable-splitter": "^2.1.2",
-    "fable-web-worker": "^1.0.0-beta-001",
+    "fable-splitter": "^2.1.5",
+    "fable-standalone": "^1.0.0-beta-003",
     "file-loader": "^2.0.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.1",
