--- a/src/App/App.fsproj
+++ b/src/App/App.fsproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="..\..\node_modules\fable-web-worker\src\Interfaces.fs" />
-    <Compile Include="..\..\node_modules\fable-web-worker\src\Shared.fs" />
+    <Compile Include="..\..\node_modules\fable-Standalone\src\Interfaces.fs" />
+    <Compile Include="..\..\node_modules\fable-Standalone\src\Worker\Shared.fs" />
     <Compile Include="Libs/ReactDeviceDetect.fs" />
     <Compile Include="Monaco.fs" />
     <Compile Include="Prelude.fs" />
