--- a/package.json
+++ b/package.json
@@ -8,46 +8,45 @@
   "license": "MIT",
   "scripts": {},
   "dependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "@types/lz-string": "^1.3.32",
-    "autoprefixer": "^9.4.2",
-    "babel-loader": "^8.0.4",
-    "bulma": "^0.7.2",
+    "@types/lz-string": "^1.3.33",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "bulma": "^0.7.4",
     "bulma-pageloader": "^2.1.0",
     "bulma-switch": "^2.0.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.0.1",
-    "fable-babel-plugins": "^2.1.0",
-    "fable-compiler": "^2.2.0-beta-010",
-    "fable-loader": "^2.1.3",
-    "fable-metadata": "^1.0.0-beta-002",
-    "fable-splitter": "^2.1.5",
-    "fable-standalone": "^1.0.0-beta-009",
-    "file-loader": "^2.0.0",
+    "copy-webpack-plugin": "^5.0.2",
+    "css-loader": "^2.1.1",
+    "fable-compiler": "^2.3.3",
+    "fable-loader": "^2.1.6",
+    "fable-metadata": "^1.0.1",
+    "fable-splitter": "^2.1.8",
+    "fable-standalone": "^1.0.4",
+    "file-loader": "^3.0.1",
     "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lz-string": "^1.4.4",
-    "mini-css-extract-plugin": "^0.5.0",
-    "monaco-editor": "0.15.6",
+    "mini-css-extract-plugin": "^0.6.0",
+    "monaco-editor": "0.16.2",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "node-sass": "^4.11.0",
-    "raw-loader": "^1.0.0",
-    "react": "^16.6.3",
-    "react-device-detect": "^1.6.1",
-    "react-dom": "^16.6.3",
-    "react-monaco-editor": "^0.22.0",
-    "react-resize-detector": "^3.2.1",
+    "raw-loader": "^2.0.0",
+    "react": "^16.8.6",
+    "react-device-detect": "^1.6.2",
+    "react-dom": "^16.8.6",
+    "react-monaco-editor": "^0.25.1",
+    "react-resize-detector": "^4.1.3",
     "remotedev": "^0.2.9",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14",
-    "workbox-webpack-plugin": "^3.6.3",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1",
+    "workbox-webpack-plugin": "^4.3.0",
     "worker-loader": "^2.0.0"
   }
 }
