--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-      "build-lib": "fable-splitter -c src/Lib/splitter.config.js",
-      "build": "webpack",
-      "start": "webpack-dev-server",
-      "deploy": "gh-pages -d deploy"
+    "build-lib": "fable-splitter -c src/Lib/splitter.config.js",
+    "build": "webpack",
+    "start": "webpack-dev-server",
+    "deploy": "gh-pages -d deploy"
   },
   "dependencies": {
     "@babel/core": "^7.4.3",
@@ -38,7 +38,6 @@
     "mini-css-extract-plugin": "^0.6.0",
     "monaco-editor": "0.16.2",
     "monaco-editor-webpack-plugin": "^1.7.0",
-    "node-sass": "^4.11.0",
     "raw-loader": "^2.0.0",
     "react": "^16.8.6",
     "react-device-detect": "^1.6.2",
@@ -46,6 +45,7 @@
     "react-monaco-editor": "^0.25.1",
     "react-resize-detector": "^4.1.3",
     "remotedev": "^0.2.9",
+    "sass": "^1.19.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
