--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@types/lz-string": "^1.3.33",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
@@ -25,13 +26,12 @@
     "bulma-switch": "^2.0.0",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
-    "fable-compiler": "^2.3.3",
-    "fable-loader": "^2.1.6",
-    "fable-metadata": "^1.0.1",
+    "fable-compiler": "^2.3.7",
+    "fable-loader": "^2.1.7",
+    "fable-metadata": "^1.1.1",
     "fable-splitter": "^2.1.8",
-    "fable-standalone": "^1.0.4",
+    "fable-standalone": "^1.1.1",
     "file-loader": "^3.0.1",
-    "font-awesome": "^4.7.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lz-string": "^1.4.4",
