--- a/src/Lib/Fable.Repl.Lib.fsproj
+++ b/src/Lib/Fable.Repl.Lib.fsproj
@@ -15,11 +15,6 @@
     <Compile Include="../../paket-files/fable-compiler/fable-fetch/src/Fetch.fs" />
     <!-- <Compile Include="../../paket-files/alfonsogarciacaro/Fable.SimpleHttp/src/Http.fs" /> -->
 
-    <Compile Include="../../paket-files/elmish/elmish/src/prelude.fs" />
-    <Compile Include="../../paket-files/elmish/elmish/src/cmd.fs" />
-    <Compile Include="../../paket-files/elmish/elmish/src/ring.fs" />
-    <Compile Include="../../paket-files/elmish/elmish/src/program.fs" />
-
     <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.fs" />
     <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.ReactDom.fs" />
     <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Hooks.fs" />
@@ -28,6 +23,13 @@
     <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Helpers.fs" />
     <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Standard.fs" />
     <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.FunctionComponent.fs" />
+
+    <Compile Include="../../paket-files/fable-compiler/fable-recharts/src/Fable.Recharts.fs" />
+
+    <Compile Include="../../paket-files/elmish/elmish/src/prelude.fs" />
+    <Compile Include="../../paket-files/elmish/elmish/src/cmd.fs" />
+    <Compile Include="../../paket-files/elmish/elmish/src/ring.fs" />
+    <Compile Include="../../paket-files/elmish/elmish/src/program.fs" />
 
     <!-- <Compile Include="../../paket-files/elmish/react/src/common.fs" />
     <Compile Include="../../paket-files/elmish/react/src/react.fs" /> -->
