--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bulma": "^0.7.4",
     "bulma-pageloader": "^2.1.0",
     "bulma-switch": "^2.0.0",
+    "bulma-tooltip": "^2.0.2",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "fable-compiler": "^2.4.2",
