--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -27,7 +27,7 @@ github:
     # add a "Review in Gitpod" button to the pull request's description (defaults to false)
     addBadge: false
     # add a label once the prebuild is ready to pull requests (defaults to false)
-    addLabel: true
+    addLabel: false
 
 vscode:
   extensions:
