Fix #97 support reflection API in the browser, auto update fable-compiler version, upgrade dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "**/obj": true,
         "**/.fake": true,
         "**/packages": true,
-        "**/node_modules": true,
+        "**/node_modules": false,
         "**/bower_components": true
     },
     "files.trimTrailingWhitespace": true,
