--- a/package.json
+++ b/package.json
@@ -15,37 +15,37 @@
     "@types/lz-string": "^1.3.33",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
-    "bulma": "^0.7.5",
+    "bulma": "^0.8.0",
     "bulma-pageloader": "^2.2.0",
     "bulma-switch": "^2.0.0",
-    "bulma-tooltip": "^2.0.2",
+    "bulma-tooltip": "^3.0.2",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.4.2",
     "fable-compiler": "^2.4.15",
     "fable-loader": "^2.1.8",
     "fable-metadata": "^1.3.0",
     "fable-splitter": "^2.1.12",
     "fable-standalone": "^1.3.2",
-    "file-loader": "^3.0.1",
+    "file-loader": "^5.1.0",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "lz-string": "^1.4.4",
-    "mini-css-extract-plugin": "^0.6.0",
-    "monaco-editor": "0.16.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.12.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
-    "react-monaco-editor": "^0.25.1",
+    "react-monaco-editor": "^0.34.0",
     "react-resize-detector": "^4.2.1",
     "remotedev": "^0.2.9",
     "sass": "^1.25.0",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.23.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "workbox-webpack-plugin": "^4.3.1",
+    "workbox-webpack-plugin": "^5.0.0",
     "worker-loader": "^2.0.0"
   }
 }
