Fix #79: Use CSS classes in the F# code instead of inline style

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ ports:
   - port: 8080
 
 tasks:
-  - before: dotnet restore
+  - before: dotnet tool restore && dotnet restore
   - init: ./fake.sh build -t BuildLib
 
 github:
