--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "bulma-tooltip": "^3.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "fable-compiler": "^2.4.15",
+    "fable-compiler": "^2.4.18",
     "fable-loader": "^2.1.8",
     "fable-metadata": "^1.3.0",
     "fable-splitter": "^2.1.12",
-    "fable-standalone": "^1.3.2",
+    "fable-standalone": "^1.3.5",
     "file-loader": "^5.1.0",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -47,5 +47,8 @@
     "webpack-dev-server": "^3.10.3",
     "workbox-webpack-plugin": "^5.0.0",
     "worker-loader": "^2.0.0"
+  },
+  "devDependencies": {
+    "npm-check-updates": "^4.0.3"
   }
 }
