--- a/package.json
+++ b/package.json
@@ -7,48 +7,49 @@
     "deploy": "gh-pages -d deploy"
   },
   "dependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "@types/lz-string": "^1.3.33",
-    "autoprefixer": "^9.7.4",
-    "babel-loader": "^8.0.6",
-    "bulma": "^0.8.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/lz-string": "^1.3.34",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
+    "bulma": "^0.8.2",
     "bulma-pageloader": "^2.2.0",
     "bulma-switch": "^2.0.0",
     "bulma-tooltip": "^3.0.2",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "fable-compiler": "^2.4.18",
-    "fable-loader": "^2.1.8",
-    "fable-metadata": "^1.3.0",
-    "fable-splitter": "^2.1.12",
-    "fable-standalone": "^1.3.5",
-    "file-loader": "^5.1.0",
+    "css-loader": "^3.5.2",
+    "fable-compiler": "^2.8.1",
+    "fable-loader": "^2.1.9",
+    "fable-metadata": "^1.4.0",
+    "fable-splitter": "^2.1.13",
+    "fable-standalone": "^1.3.14",
+    "file-loader": "^6.0.0",
     "gh-pages": "^2.2.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.2.0",
     "lz-string": "^1.4.4",
     "mini-css-extract-plugin": "^0.9.0",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-device-detect": "^1.11.14",
-    "react-dom": "^16.12.0",
-    "react-monaco-editor": "^0.34.0",
-    "react-resize-detector": "^4.2.1",
+    "react-dom": "^16.13.1",
+    "react-monaco-editor": "^0.36.0",
+    "react-resize-detector": "^4.2.3",
     "remotedev": "^0.2.9",
-    "sass": "^1.25.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.41.6",
+    "style-loader": "^1.1.4",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "workbox-webpack-plugin": "^5.0.0",
+    "workbox-webpack-plugin": "^5.1.2",
     "worker-loader": "^2.0.0"
   },
   "devDependencies": {
-    "npm-check-updates": "^4.0.3"
+    "npm-check-updates": "^4.1.2",
+    "npx": "^10.2.2"
   }
 }
