Move libraries in a separate group making it easier to update what we want

--- a/src/Lib/Fable.Repl.Lib.fsproj
+++ b/src/Lib/Fable.Repl.Lib.fsproj
@@ -5,77 +5,77 @@
     <DefineConstants>$(DefineConstants);FABLE_COMPILER;FABLE_REPL_LIB</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="../../paket-files/thoth-org/Thoth.Json/src/Types.fs" />
-    <Compile Include="../../paket-files/thoth-org/Thoth.Json/src/Decode.fs" />
-    <Compile Include="../../paket-files/thoth-org/Thoth.Json/src/Encode.fs" />
+    <Compile Include="../../paket-files/library/thoth-org/Thoth.Json/src/Types.fs" />
+    <Compile Include="../../paket-files/library/thoth-org/Thoth.Json/src/Decode.fs" />
+    <Compile Include="../../paket-files/library/thoth-org/Thoth.Json/src/Encode.fs" />
     <!-- <Compile Include="../../paket-files/thoth-org/Thoth.Json/src/Extra.fs" /> -->
 
-    <Compile Include="../../paket-files/fable-compiler/fable-promise/src/Promise.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-promise/src/PromiseImpl.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-fetch/src/Fetch.fs" />
-    <!-- <Compile Include="../../paket-files/alfonsogarciacaro/Fable.SimpleHttp/src/Http.fs" /> -->
+    <Compile Include="../../paket-files/library/fable-compiler/fable-promise/src/Promise.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-promise/src/PromiseImpl.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-fetch/src/Fetch.fs" />
+    <!-- <Compile Include="../../paket-files/alfonsogarciacaro/Fable.SimpleHttp/src/Http.fslibrary/" /> -->
 
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.ReactDom.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Hooks.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Props.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.React.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.ReactDom.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.React.Hooks.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.React.Props.fs" />
     <!-- <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Extensions.fs" /> -->
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Helpers.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.Standard.fs" />
-    <Compile Include="../../paket-files/fable-compiler/fable-react/src/Fable.React.FunctionComponent.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.React.Helpers.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.React.Standard.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-react/src/Fable.React.FunctionComponent.fs" />
 
-    <Compile Include="../../paket-files/fable-compiler/fable-recharts/src/Fable.Recharts.fs" />
+    <Compile Include="../../paket-files/library/fable-compiler/fable-recharts/src/Fable.Recharts.fs" />
 
-    <Compile Include="../../paket-files/elmish/elmish/src/prelude.fs" />
-    <Compile Include="../../paket-files/elmish/elmish/src/cmd.fs" />
-    <Compile Include="../../paket-files/elmish/elmish/src/ring.fs" />
-    <Compile Include="../../paket-files/elmish/elmish/src/program.fs" />
+    <Compile Include="../../paket-files/library/elmish/elmish/src/prelude.fs" />
+    <Compile Include="../../paket-files/library/elmish/elmish/src/cmd.fs" />
+    <Compile Include="../../paket-files/library/elmish/elmish/src/ring.fs" />
+    <Compile Include="../../paket-files/library/elmish/elmish/src/program.fs" />
 
     <!-- <Compile Include="../../paket-files/elmish/react/src/common.fs" />
     <Compile Include="../../paket-files/elmish/react/src/react.fs" /> -->
     <Compile Include="Elmish.React.fs" />
 
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Common.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Breadcrumb.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Card.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Dropdown.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Media.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Menu.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Message.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Modal.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Navbar.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Pagination.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Panel.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Components/Tabs.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Box.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Button.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Content.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Delete.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Heading.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Icon.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Image.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Notification.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Progress.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Table.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Tag.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Checkbox.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Control.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Field.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/File.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Help.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Input.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Label.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Radio.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Select.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Elements/Form/Textarea.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Column.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Columns.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Container.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Footer.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Hero.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Level.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Section.fs" />
-    <Compile Include="../../paket-files/fulma/Fulma/src/Fulma/Layouts/Tile.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Common.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Breadcrumb.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Card.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Dropdown.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Media.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Menu.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Message.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Modal.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Navbar.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Pagination.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Panel.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Components/Tabs.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Box.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Button.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Content.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Delete.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Heading.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Icon.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Image.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Notification.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Progress.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Table.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Tag.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Checkbox.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Control.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Field.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/File.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Help.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Input.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Label.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Radio.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Select.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Elements/Form/Textarea.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Column.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Columns.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Container.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Footer.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Hero.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Level.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Section.fs" />
+    <Compile Include="../../paket-files/library/fulma/Fulma/src/Fulma/Layouts/Tile.fs" />
 
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
